// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toggle /> should render correctly with custom props 1`] = `
<label
  class="ToggleLabel-sc-1p6qi5g-0 eRLkxH"
>
  <input
    class="ToggleCheckbox-sc-1nmpw1g-0 liRhln"
    disabled=""
    type="checkbox"
  />
  <span
    class="ToggleSlider-sc-1lsczbh-0 fIVyvB"
    disabled=""
  />
</label>
`;

exports[`<Toggle /> should render correctly with default props 1`] = `
<label
  class="ToggleLabel-sc-1p6qi5g-0 eRLkxH"
>
  <input
    class="ToggleCheckbox-sc-1nmpw1g-0 fRnJHr"
    type="checkbox"
  />
  <span
    class="ToggleSlider-sc-1lsczbh-0 fJuDOp"
  />
</label>
`;
